--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,6 @@
     <string name="scanner">Scanner</string>
     <string name="history">History\n</string>
     <string name="create">Create</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="no_qr_codes">No QR codes scanned yet</string>
     <string name="open_qr">Open QR scanner</string>
     <string name="create_qr">Create QR code</string>
@@ -17,7 +15,7 @@
     <string name="text">Text</string>
     <string name="insert_text">Insert text</string>
     <string name="https">https://</string>
-    <string name="longtitude">Longtitude</string>
+    <string name="longtitude">Longitude</string>
     <string name="latitude">Latitude</string>
     <string name="recipient_s_email">Recipient\'s email</string>
     <string name="subject">Subject</string>
